# pavlov-jb-

./: CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml
Source/: DllMain.cpp
Source/Core/: AutoUpdater.h  DX11Hook.h  DrawIndexedHook.h  InlineHook.h  Memory.h
Source/Features/: Aimbot.h  Chams.h  DrawObjectHook.h  ESP.h  Features.h  FileSystemHook.h  GrenadePrediction.h  HitEffects.h  InventoryChanger.h  KnifeHook.h  Misc.h  SceneChams.h  TriggerBot.h
Source/GUI/: NexusGUI_backup.h  PremiumGUI.h
Source/SDK/: Entity.h  Offsets.h
Source/imgui/: imgui_draw.cpp
Source/minhook/: trampoline.h
